--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -24,25 +24,41 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           ref: main
+
       - name: Set up Python
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: 3.13
           check-latest: true
+
       - name: Install dependencies
         run: |
           pip install .[publish]
+
       - name: Get Version
         id: version
         shell: bash
         run: |
           version="$(python3 ./.github/actions/get_version.py)"
           echo "version=$version" >> $GITHUB_OUTPUT
+
       - name: Is Tag exists
-        uses: mukunku/tag-exists-action@bdad1eaa119ce71b150b952c97351c75025c06a9 # v1.6.0
         id: checkTag
+        uses: actions/github-script@v7.0.1 # v7.0.1
         with:
-          tag: ${{ steps.version.outputs.version }}
+          script: |
+            try {
+              await github.rest.repos.getReleaseByTag({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                tag: `${{ steps.version.outputs.version }}`
+              });
+              core.setOutput("exists","true");
+            } catch (e) {
+              // 404 = Release nicht gefunden, alles andere weiterwerfen
+              core.setOutput("exists", e.status === 404 ? "false" : "error");
+            }
+
       - if: steps.checkTag.outputs.exists == 'false'
         name: Check Tag
         id: check-tag
@@ -50,6 +66,7 @@ jobs:
           if [[ "${{ steps.version.outputs.version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
               echo "match=true" >> $GITHUB_OUTPUT
           fi
+
       - name: ZIP Component Dir
         if: steps.check-tag.outputs.match == 'true'
         run: |
@@ -87,24 +104,6 @@ jobs:
         run: |
           gpg --detach-sign --batch --yes --pinentry-mode loopback --passphrase "$PASSPHRASE" -a ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip
 
-      - name: Upload zip to release
-        if: steps.check-tag.outputs.match == 'true'
-        uses: svenstaro/upload-release-action@04733e069f2d7f7f0b4aebc4fbdbce8613b03ccd # v2
-        with:
-          repo_token: ${{ secrets.TOKEN }}
-          file: ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip
-          asset_name: pyecotrend_ista.zip
-          tag: ${{ steps.version.outputs.version }}
-          overwrite: true
-      - name: Upload zip to release
-        if: steps.check-tag.outputs.match == 'true'
-        uses: svenstaro/upload-release-action@04733e069f2d7f7f0b4aebc4fbdbce8613b03ccd # v2
-        with:
-          repo_token: ${{ secrets.TOKEN }}
-          file: ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip.asc
-          asset_name: pyecotrend_ista.zip.asc
-          tag: ${{ steps.version.outputs.version }}
-          overwrite: true
       - name: Create Release
         if: steps.check-tag.outputs.match == 'true'
         uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631 # v2.2.2
@@ -114,12 +113,35 @@ jobs:
           draft: false
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
+          generate_release_notes: true
+
+      - name: Upload zip to release
+        if: steps.check-tag.outputs.match == 'true'
+        uses: svenstaro/upload-release-action@04733e069f2d7f7f0b4aebc4fbdbce8613b03ccd # v2
+        with:
+          repo_token: ${{ secrets.TOKEN }}
+          file: ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip
+          asset_name: pyecotrend_ista.zip
+          tag: ${{ steps.version.outputs.version }}
+          overwrite: true
+
+      - name: Upload zip to release
+        if: steps.check-tag.outputs.match == 'true'
+        uses: svenstaro/upload-release-action@04733e069f2d7f7f0b4aebc4fbdbce8613b03ccd # v2
+        with:
+          repo_token: ${{ secrets.TOKEN }}
+          file: ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip.asc
+          asset_name: pyecotrend_ista.zip.asc
+          tag: ${{ steps.version.outputs.version }}
+          overwrite: true
+
       - name: Build and publish package to TestPyPI
         # if: steps.check-tag.outputs.match == 'true'
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
         run: tox -e test-publish -- --non-interactive
+
       - name: Build and publish package to PyPI
         # if: steps.check-tag.outputs.match == 'true'
         env:
