--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -161,11 +161,11 @@ jobs:
         with:
           skip-existing: true
 
-      - name: Publish package to TestPyPI
-        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
-        with:
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_TOKEN }}
-          repository-url: https://test.pypi.org/legacy/
-          skip-existing: true
-          attestations: false
+      # - name: Publish package to TestPyPI
+      #   uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
+      #   with:
+      #     user: __token__
+      #     password: ${{ secrets.TEST_PYPI_TOKEN }}
+      #     repository-url: https://test.pypi.org/legacy/
+      #     skip-existing: true
+      #     attestations: false
